Fixed execution running on Java 16 and higher, added test that record equals() methods compare using string or object equals (instead of ==).
PiperOrigin-RevId: 699319244